examples/neg/match_unrelated.effekt
type Something {}
type SomethingElse { MakeIt() }

def tryMatch(s: Something) = s match {
  case MakeIt() => 2
}

def main() = ()